package com.john.backend_gestion_restaurantes.modelos;

public enum UsuarioRol {
    ADMIN, USUARIO, EMPRESARIO
}
